Table users {
  id int [pk, increment]
  name varchar(100) [not null]
  email varchar(150) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null]
  created_at datetime [not null]
}

Table volunteers {
  id int [pk, increment]
  user_id int [not null, unique, ref: > users.id]
  skills varchar(255)
  availability varchar(100)
  status varchar(30) [not null]
}

Table victims {
  id int [pk, increment]
  user_id int [not null, unique, ref: > users.id]
  location varchar(255)
  created_at datetime [not null]
}

Table disasters {
  id int [pk, increment]
  name varchar(150) [not null]
  type varchar(50) [not null]
  location varchar(255) [not null]
  status varchar(30) [not null]
  started_at datetime
}

Table relief_requests {
  id int [pk, increment]
  victim_id int [not null, ref: > victims.id]
  disaster_id int [not null, ref: > disasters.id]
  title varchar(150) [not null]
  description text [not null]
  location varchar(255) [not null]
  priority varchar(20) [not null]
  status varchar(30) [not null]
  created_at datetime [not null]
}

Table assignments {
  id int [pk, increment]
  request_id int [not null, ref: > relief_requests.id]
  volunteer_id int [not null, ref: > volunteers.id]
  status varchar(30) [not null]
  assigned_at datetime [not null]
  completed_at datetime
}
